# FraudOut

./: .gitignore  Dockerfile  README.md  pyproject.toml
docker/: docker-compose.yml
docs/: architecture.md  hdfs_plan.md
hadoop-conf/: core-site.xml  hdfs-site.xml  hive-site.xml
hadoop/hive/: ddl.sql
ingest/: marqeta_simulator.py
metastore_db/: db.lck  service.properties
spark/: fraudout_spark_sql.py  spark_to_hdfs.py
