[project]
name = "fraudout"
version = "0.1.0"
description = "ud detection system"
authors = [
    {name = "HHsieh09",email = "henryfbs01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
